// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds views with blocking blocks record embeds 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "embed": Object {
        "$type": "app.bsky.embed.record#view",
        "record": Object {
          "$type": "app.bsky.embed.record#viewRecord",
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
              "chat": Object {
                "allowIncoming": "none",
              },
            },
            "did": "user(2)",
            "handle": "dan.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "cid": "cids(3)",
          "embeds": Array [
            Object {
              "$type": "app.bsky.embed.record#view",
              "record": Object {
                "$type": "app.bsky.embed.record#viewBlocked",
                "author": Object {
                  "did": "user(3)",
                  "viewer": Object {
                    "blockedBy": false,
                    "blocking": "record(5)",
                  },
                },
                "blocked": true,
                "uri": "record(4)",
              },
            },
          ],
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 0,
          "quoteCount": 1,
          "replyCount": 0,
          "repostCount": 1,
          "uri": "record(3)",
          "value": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.record",
              "record": Object {
                "cid": "cids(4)",
                "uri": "record(4)",
              },
            },
            "facets": Array [
              Object {
                "features": Array [
                  Object {
                    "$type": "app.bsky.richtext.facet#mention",
                    "did": "user(0)",
                  },
                ],
                "index": Object {
                  "byteEnd": 18,
                  "byteStart": 0,
                },
              },
            ],
            "text": "@alice.bluesky.xyz is the best",
          },
        },
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(0)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(0)",
          "val": "test-label",
        },
      ],
      "likeCount": 2,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.record",
          "record": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "yoohoo label_me",
      },
      "replyCount": 0,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "threadContext": Object {},
  },
}
`;

exports[`pds views with blocking blocks thread parent 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "parent": Object {
      "$type": "app.bsky.feed.defs#blockedPost",
      "author": Object {
        "did": "user(2)",
        "viewer": Object {
          "blockedBy": true,
        },
      },
      "blocked": true,
      "uri": "record(4)",
    },
    "post": Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 0,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(4)",
          },
        },
        "text": "alice replies to dan",
      },
      "replyCount": 1,
      "repostCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "threadMuted": false,
      },
    },
    "replies": Array [
      Object {
        "$type": "app.bsky.feed.defs#threadViewPost",
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "did": "user(3)",
            "handle": "carol.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(4)",
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [],
          "likeCount": 0,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "reply": Object {
              "parent": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
              "root": Object {
                "cid": "cids(3)",
                "uri": "record(4)",
              },
            },
            "text": "carol replies to alice's reply to dan",
          },
          "replyCount": 0,
          "repostCount": 0,
          "uri": "record(5)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "threadContext": Object {},
      },
    ],
    "threadContext": Object {},
  },
}
`;

exports[`pds views with blocking blocks thread reply 1`] = `
Object {
  "thread": Object {
    "$type": "app.bsky.feed.defs#threadViewPost",
    "post": Object {
      "author": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "bookmarkCount": 0,
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "likeCount": 3,
      "quoteCount": 0,
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "uri": "record(0)",
      "viewer": Object {
        "bookmarked": false,
        "embeddingDisabled": false,
        "like": "record(4)",
        "repost": "record(3)",
        "threadMuted": false,
      },
    },
    "replies": Array [
      Object {
        "$type": "app.bsky.feed.defs#blockedPost",
        "author": Object {
          "did": "user(2)",
          "viewer": Object {
            "blockedBy": false,
            "blocking": "record(6)",
          },
        },
        "blocked": true,
        "uri": "record(5)",
      },
      Object {
        "$type": "app.bsky.feed.defs#threadViewPost",
        "post": Object {
          "author": Object {
            "associated": Object {
              "activitySubscription": Object {
                "allowSubscriptions": "followers",
              },
            },
            "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)@jpeg",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "did": "user(3)",
            "displayName": "bobby",
            "handle": "bob.test",
            "labels": Array [],
            "viewer": Object {
              "blockedBy": false,
              "following": "record(8)",
              "muted": false,
            },
          },
          "bookmarkCount": 0,
          "cid": "cids(3)",
          "embed": Object {
            "$type": "app.bsky.embed.images#view",
            "images": Array [
              Object {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(4)@jpeg",
                "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(4)@jpeg",
              },
            ],
          },
          "indexedAt": "1970-01-01T00:00:00.000Z",
          "labels": Array [
            Object {
              "cid": "cids(3)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label",
            },
            Object {
              "cid": "cids(3)",
              "cts": "1970-01-01T00:00:00.000Z",
              "src": "did:example:labeler",
              "uri": "record(7)",
              "val": "test-label-2",
            },
          ],
          "likeCount": 0,
          "quoteCount": 0,
          "record": Object {
            "$type": "app.bsky.feed.post",
            "createdAt": "1970-01-01T00:00:00.000Z",
            "embed": Object {
              "$type": "app.bsky.embed.images",
              "images": Array [
                Object {
                  "alt": "../dev-env/assets/key-landscape-small.jpg",
                  "image": Object {
                    "$type": "blob",
                    "mimeType": "image/jpeg",
                    "ref": Object {
                      "$link": "cids(4)",
                    },
                    "size": 4114,
                  },
                },
              ],
            },
            "reply": Object {
              "parent": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
              "root": Object {
                "cid": "cids(0)",
                "uri": "record(0)",
              },
            },
            "text": "hear that label_me label_me_2",
          },
          "replyCount": 1,
          "repostCount": 0,
          "uri": "record(7)",
          "viewer": Object {
            "bookmarked": false,
            "embeddingDisabled": false,
            "threadMuted": false,
          },
        },
        "threadContext": Object {},
      },
    ],
    "threadContext": Object {},
  },
}
`;
